fix: replace Math.clamp with Math.min and Math.max
Java 17 does not provide the clamp method yet