@@ -147,7 +147,7 @@ public abstract class ReadOnlyIntegerStateBase extends ReadOnlyNumberStateBase<I
 		if (min > max) {
 			throw new IllegalArgumentException("min must be less than or equal to max");
 		}
-		return Reflect.createIntegerReflection(() -> Math.clamp(get(), min, max), this);
+		return Reflect.createIntegerReflection(() -> Math.min(Math.max(get(), min), max), this);
 	}
 
 	@Override
@@ -155,7 +155,7 @@ public abstract class ReadOnlyIntegerStateBase extends ReadOnlyNumberStateBase<I
 		if (min > max) {
 			throw new IllegalArgumentException("min must be less than or equal to max");
 		}
-		return Reflect.createLongReflection(() -> Math.clamp(get(), min, max), this);
+		return Reflect.createLongReflection(() -> Math.min(Math.max(get(), min), max), this);
 	}
 
 	@Override
@@ -163,7 +163,7 @@ public abstract class ReadOnlyIntegerStateBase extends ReadOnlyNumberStateBase<I
 		if (min > max) {
 			throw new IllegalArgumentException("min must be less than or equal to max");
 		}
-		return Reflect.createFloatReflection(() -> Math.clamp(get(), min, max), this);
+		return Reflect.createFloatReflection(() -> Math.min(Math.max(get(), min), max), this);
 	}
 
 	@Override
@@ -171,7 +171,7 @@ public abstract class ReadOnlyIntegerStateBase extends ReadOnlyNumberStateBase<I
 		if (min > max) {
 			throw new IllegalArgumentException("min must be less than or equal to max");
 		}
-		return Reflect.createDoubleReflection(() -> Math.clamp(get(), min, max), this);
+		return Reflect.createDoubleReflection(() -> Math.min(Math.max(get(), min), max), this);
 	}
 
 	@Override
